--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-.DS_Store
 node_modules
-/build
-/.svelte-kit
-/package
+
+.cache
 .env
-.env.*
-!.env.example
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
+.vercel
+.output
+
+/build/
+/public/build
+/api/index.js
+/api/index.js.map
