--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "remix.env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "app/hooks/useDarkMode.jsx"
+    "app/hooks/useDarkMode.tsx"
   ],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2019"],
