--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
+    "start": "netlify serve",
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@netlify/functions": "^1.4.0",
+    "@remix-run/netlify": "^1.19.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
@@ -15,8 +18,6 @@
     "@remix-run/css-bundle": "^1.18.1",
     "@remix-run/node": "^1.18.1",
     "@remix-run/react": "^1.18.1",
-    "@remix-run/vercel": "^1.18.1",
-    "@vercel/node": "^2.10.3",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
