--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@netlify/functions": "^1.4.0",
-    "@remix-run/netlify": "^1.19.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@netlify/functions": "^1.4.0",
     "@remix-run/css-bundle": "^1.19.1",
+    "@remix-run/netlify": "^1.19.1",
     "@remix-run/node": "^1.19.1",
     "@remix-run/react": "^1.19.1",
     "isbot": "^3.6.8",
@@ -30,6 +30,7 @@
     "@remix-run/serve": "^1.19.1",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "esbuild": "^0.18.16",
     "eslint": "^8.38.0",
     "typescript": "^5.0.4"
   },
