--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@remix-run/netlify": "^1.19.1",
     "@remix-run/node": "^1.19.1",
     "@remix-run/react": "^1.19.1",
-    "highlight.js": "^11.9.0",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
     "resend": "^0.16.0",
     "tailwindcss": "^3.3.3"
   },
