--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@remix-run/serve": "^1.19.1",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "esbuild": "^0.18.16",
     "eslint": "^8.38.0",
     "typescript": "^5.0.4"
